--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/dashing/test_osrf_testing_tools_cpp
-	previous = 
-	base = f5be626
+	previous = f5be626
+	base = 275ef1e
 	trim = 
 	trimbase = 
