--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = vcpkg/dashing/test_osrf_testing_tools_cpp
-	previous = 
-	base = b932741
+	previous = b932741
+	base = 1d7ad80
 	trim = 
 	trimbase = 
