--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/dashing/osrf_testing_tools_cpp
-	previous = 
-	base = a8d91f4
+	previous = a8d91f4
+	base = 01e3012
 	trim = 
 	trimbase = 
